--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   },
   "authors": {
     "name": {
-      "Nathan Wooten",
+      "Nathan Wooten"
     },
     "homepage": {
       "https://github.com/nathanwooten/pathfind"
