--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,10 @@
   "require": {
     "php": ">=8.0",
   },
-  "authors": {
-    "name": {
-      "Nathan Wooten"
-    },
-    "homepage": {
-      "https://github.com/nathanwooten/pathfind"
+  "authors": [
+    {
+      "name": "Nathan Wooten",
+      "homepage": "https://github.com/nathanwooten"
     }
-  }
+  ]
 }
